# rust-webapp-skill

./: README.md  SKILL.md  install.py
assets/: Cargo.toml  Dockerfile  README.md
assets/scripts/: neon-setup
assets/src/: main.rs  models.rs
assets/static/: styles.css
assets/templates/: create.html
references/: pitfalls.md  templates.md
skill/assets/migrations/: 001_init.sql
skill/assets/src/: db.rs
skill/assets/templates/: base.html  edit.html  index.html
skill/references/: design.md  handlers.md  models.md
skill/scripts/: scaffold  validate
